DuPont DevSB/src/objects/ConstructionPts__CP_Role_Type__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__ParentID__c</fullName>
        <label>ParentID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__RoleTypeID__c</fullName>
        <externalId>true</externalId>
        <label>RoleTypeID</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConstructionPts__RoleType_SortOrder__c</fullName>
        <label>Role Type Sort Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__ShowRoleType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowRoleType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__isViewColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Column in Views?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dodge Role Type</label>
    <nameField>
        <label>Dodge Role Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dodge Role Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>